Last changes done. PDF created and published to Rpubs at http://rpubs.com/gumbas/88921

--- a/repdata_assessemnt_2.html
+++ b/repdata_assessemnt_2.html
@@ -10,7 +10,7 @@
 
 <meta name="author" content="Tomasz Samsel" />
 
-<meta name="date" content="2015-05-24" />
+<meta name="date" content="2015-06-21" />
 
 <title>Reproducible Research: Peer Assessment 2</title>
 
@@ -64,7 +64,7 @@ img {
 <div id="header">
 <h1 class="title">Reproducible Research: Peer Assessment 2</h1>
 <h4 class="author"><em>Tomasz Samsel</em></h4>
-<h4 class="date"><em>05/24/2015</em></h4>
+<h4 class="date"><em>06/21/2015</em></h4>
 </div>
 
 
@@ -76,7 +76,7 @@ img {
 </div>
 <div id="data-processing." class="section level2">
 <h2>Data processing.</h2>
-<p>Libraries required for data processing are: R.utils, dplyr and ggplot.</p>
+<p>Libraries required for data processing are: R.utils and dplyr.</p>
 <div id="loading-the-data." class="section level3">
 <h3>Loading the data.</h3>
 <pre class="r"><code># download file from URL
